# cosmic_kb

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.tmp/: scan_compare_20260627_191748.json
comic-understand-long/: SKILL.md
comic-understand-long/.cosmic-understand/: config.example.json
comic-understand-long/references/adv/: entity-metadata.md  form-utils.md  view-handler.md
comic-understand-long/references/base/plugin/: plugin-botp.md  plugin-import.md  plugin-list.md  plugin-report-data.md  plugin-task.md
comic-understand-long/references/base/sdk/: sdk-dynamic-model-svc.md  sdk-dynamic-object.md  sdk-entity-model.md  sdk-id.md  sdk-log.md  (+2 more)
comic-understand-long/scripts/: config_loader.py  cosmic-api-knowledge.py  cosmic-form-metadata.py  cqkd_cosmic_understand.py
cosmic-kb-setup/: SKILL.md
cosmic-kb-understand/: SKILL.md
cosmic_kb/: __init__.py  _assets.py  progress.py
cosmic_kb/bootstrap/: __init__.py  mcp_register.py  orchestrator.py
cosmic_kb/bridge/: __init__.py  linker.py  namespace.py
cosmic_kb/cli/: __init__.py  main.py
cosmic_kb/context/: __init__.py  builder.py
cosmic_kb/dbmeta/: __init__.py  assemble.py  config.py  connection.py  discover.py  integrate.py  reader.py  sync.py
cosmic_kb/graph/: __init__.py  schema.sql  store.py
cosmic_kb/ingest/: __init__.py  scanner.py
cosmic_kb/java/: __init__.py  analyze.py  annotation_map.py  ast_index.py  call_edges.py  call_graph.py  constants.py  event_extractor.py  field_access.py  null_reason.py  op_trigger.py  parser.py  persistence.py  plugin_classifier.py  project_graph.py
cosmic_kb/java/symbols/: __init__.py  classpath.py  runner.py  table.py
cosmic_kb/mcp/: __init__.py  server.py
cosmic_kb/metadata/: __init__.py  dym_io.py  dym_parser.py  extension.py  merge.py  model.py  package_loader.py  template_loader.py
cosmic_kb/metadata/templates/: bos_basetpl.dym
cosmic_kb/report/: __init__.py  bill_view.py  bridge_report.py  callers.py  coverage.py  dynamic_writes.py  entry_chain.py  field_trace.py  meta_report.py  method_calls.py  op_trace.py  overview.py  parse_coverage.py  project_map.py  read_source.py  resolve_fields.py  scan_compare.py  source_read.py
cosmic_kb/semantic/: __init__.py  dictionary.py  hints.py  resolver.py
cosmic_kb/semantics/: __init__.py
cosmic_kb/semantics/rules/: anti-patterns.md
cosmic_kb/skills/: __init__.py  installer.py
cosmic_kb/skills/cosmic-kb-setup/: SKILL.md
cosmic_kb/skills/cosmic-kb-understand/: SKILL.md
cosmic_kb/web/: __init__.py  server.py
cosmic_kb/web/static/: app.js  index.html  style.css
docs/: form_key解析待办.md  read_source字段名解析逻辑.md  trace返回详解.md  下一步-操作级排障验收与钻取.md  动作车道词表.md  字段名核对工具方案.md  常规人工排错手段和步骤.md  开发计划.md  扩展元数据识别方案.md  数据包来源与form_key解析合并.md  数据包来源解析.md  返回值字段词典.md  阶段验收.md  项目精读-零基础到讲明白.md
docs/参考手册/: read_source字段名解析逻辑.md  trace返回详解.md  分发给同事.md  动作车道词表.md  发版流程.md  命令行速查.md  建库与更新详解.md  手动安装详细教程.md  接入agent与MCP.md  操作触发链原理说明.md  返回值字段词典.md
docs/核心/: V0.2.0发版说明.md  V0.2.1发版说明.md  V0.2.2发版说明.md  开发计划.md  阶段12工具能力提升总结.md  阶段验收.md  项目企划.md
docs/设计方案/: 下一步-操作级排障验收与钻取.md  分发与多agent接入方案.md  字段名核对工具方案.md  扩展元数据识别方案.md  数据包来源与form_key解析合并.md  苍穹开发排障Agent规划.md  跨类调用链解析与编译期符号方案.md  隐藏坑排障扩展待办.md
samples/: cqkd_assetcard.dym
samples/basedata/: cqkd_bill_calculation.dym
samples/bill/: cqkd_bd_customer_ext.dym
samples/bos_temp/: bos_billtpl.dym
samples/db_xml/: bd_customer_entity.txt  bd_customer_form.txt
samples/form/: cqkd_adjusttolcontract.dym
samples/trans/: 底层表中的转换规则.txt
scripts/: build_symsolver.ps1  make_dist.ps1  release.ps1  安装说明.md
skill_assets/: README.md
tests/: _synthkb.py  conftest.py  test_annotation_map.py  test_assets_resources.py  test_bill_compact.py  test_bill_lanes.py  test_bootstrap.py  test_bridge.py  test_callers.py  test_callers_entry.py  test_cli_dbmeta_sync.py  test_context.py  test_convert.py  test_coverage.py  test_db_resolve.py  test_dbmeta.py  test_dbmeta_discover.py  test_dbmeta_integrate.py  test_dbmeta_oracle.py  test_dbmeta_sync.py  test_dynamic_writes.py  test_field_scan_inline.py  test_field_trace_bounded.py  test_field_trace_header.py  test_form_key_backfill.py  test_graph.py  test_hints.py  test_ingest.py  test_install_token.py  test_java_constants.py  test_java_field.py  test_mcp.py  test_metadata.py  test_metadata_extension.py  test_method_calls.py  test_method_calls_compact.py  test_null_reason.py  test_op_trigger.py  test_packaging_extras.py  test_progress.py  (+17 more)
tests/error_return/: read_source方法返回中文字段名-测试mcp工具返回和大模型回复.txt  第三次测试.txt  第四次测试.txt
tools/symsolver/: build.gradle  settings.gradle
(+37 files in other folders)
