[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmic-kb"
dynamic = ["version"]
description = "苍穹历史项目本地理解工具 —— 段一：确定性扫描器（建 KB）。指向陌生苍穹老项目，纯本地扫描元数据与 Java 源码，产出可信度报告与项目知识库。"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "NOASSERTION" }
authors = [{ name = "cqkd" }]
keywords = ["kingdee", "cosmic", "苍穹", "code-understanding", "knowledge-base"]

# 阶段 0 不引入任何运行期硬依赖：`cosmic_kb --version` / `doctor` 必须零依赖可跑。
# 后续阶段的依赖按需放进下方 optional-dependencies，避免一上来就装一堆东西。
dependencies = []

[project.optional-dependencies]
# 阶段 1 / 5 / 6：Java 静态分析（tree-sitter 错误恢复，不依赖编译）
parse = ["tree-sitter>=0.21", "tree-sitter-java>=0.21"]
# 阶段 1：编码自动探测（GBK/GB2312/UTF-8/BOM）
encoding = ["charset-normalizer>=3.0"]
# 阶段 9：中文名↔标识模糊匹配候选
fuzzy = ["rapidfuzz>=3.0"]
# 开发与验收
dev = ["pytest>=7"]

[project.scripts]
cosmic_kb = "cosmic_kb.cli.main:main"

[tool.setuptools.packages.find]
include = ["cosmic_kb*"]

[tool.setuptools.dynamic]
version = { attr = "cosmic_kb.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
