[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmic-kb"
dynamic = ["version"]
description = "苍穹历史项目本地理解工具 —— 段一：确定性扫描器（建 KB）。指向陌生苍穹老项目，纯本地扫描元数据与 Java 源码，产出可信度报告与项目知识库。"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "NOASSERTION" }
authors = [{ name = "cqkd" }]
keywords = ["kingdee", "cosmic", "苍穹", "code-understanding", "knowledge-base"]

# 阶段 0 不引入任何运行期硬依赖：`cosmic_kb --version` / `doctor` 必须零依赖可跑。
# 后续阶段的依赖按需放进下方 optional-dependencies，避免一上来就装一堆东西。
dependencies = []

[project.optional-dependencies]
# 阶段 1 / 5 / 6：Java 静态分析（tree-sitter 错误恢复，不依赖编译）
parse = ["tree-sitter>=0.21", "tree-sitter-java>=0.21"]
# 阶段 1：编码自动探测（GBK/GB2312/UTF-8/BOM）
encoding = ["charset-normalizer>=3.0"]
# 段二接入：MCP 服务器（把取证命令暴露成 MCP 工具供 LLM 宿主调用）
mcp = ["mcp>=1.0"]
# 底层库元数据源：直连苍穹平台库（只读）取原厂/扩展元数据。当前实现 PostgreSQL
postgres = ["psycopg2-binary>=2.9"]
# 首装收敛：一次装齐段一+段二的完整能力（Java 解析 / 编码探测 / MCP / 只读库）。
# 对话式安装口令固定装这一组，保证首装依赖集合固定、可复现。自引用保持与各分组同步。
complete = ["cosmic-kb[parse,encoding,mcp,postgres]"]
# 开发与验收
dev = ["pytest>=7"]

[project.scripts]
cosmic_kb = "cosmic_kb.cli.main:main"
cosmic_kb-mcp = "cosmic_kb.mcp.server:main"

[tool.setuptools.packages.find]
include = ["cosmic_kb*"]

# 随包数据（非 -e 编辑安装也能读到，是"自包含 MCP 包/uvx/.mcpb"的前提）：
# - graph/schema.sql：KB 建表脚本（阶段4）
# - web/static/*：本地 Web 前端（阶段4.5）
# - semantics/references|rules：苍穹语义文档（cosmic_semantics 工具回传源，分发改造下沉进包）
# - metadata/templates/*.dym：继承根模板（操作 oid 回填运行期依赖）
# - skills/*/SKILL.md：CodeBuddy/Qoder/TRAE 共用的 Agent Skills
# - java/vendor/*.jar：编译期符号解析 JVM 微工具 fat jar（阶段12，使用者只需本机有 java）
[tool.setuptools.package-data]
"cosmic_kb.graph" = ["*.sql"]
"cosmic_kb.web" = ["static/*"]
"cosmic_kb.semantics" = ["references/**/*.md", "rules/**/*.md"]
"cosmic_kb.metadata" = ["templates/*.dym"]
"cosmic_kb.skills" = ["*/SKILL.md"]
"cosmic_kb.java" = ["vendor/*.jar"]

[tool.setuptools.dynamic]
version = { attr = "cosmic_kb.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
